--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -140,18 +140,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Estimation vs. Inference\n",
+    "**Estimation** is the application of an algorithm. Estimate is just going to give us an estimate of a certain parameter, such as the mean from our sample data:\n",
+    "$$\\bar{X}=\\sum_{i=1}^{N}\\frac{x_i}{n}$$\n",
+    "\n",
+    "**Inference** involves putting an accuracy on the estimate (eg. standard error of an average):\n",
+    "$$[\\sum_{i=1}^{N}\\frac{(x_i-\\bar{x})^2}{(n-1)}]^{1/2}$$\n",
+    "\n",
+    "Estimation is only a part when we talk about statistical inference. When performing statistical inference, we're trying to understand the underlying distribution of the population, including our estimates of the mean, as well as other parameters such as the standard error of the underlying properties of the population that we're sampling from.\n",
+    "\n",
+    "### Parametric vs. Non-Parametric\n",
+    "A **statistical inference** is about finding the underlying **Data Generating Process (DGP)** of our data, then the **statistical model** is going to be a set of the possible distributions or even regression that data can take. \n",
+    "\n",
+    "A **parametric model** is a particular type of statistical model that is constrained to a finite number of parameters and relies on some strict assumptions made about the distributions from which that data is pulled. For example, we have to predefine the number of coefficients according to the features or transformed features in a linear distribution, hence parametric as we are having the constraints that come along with it. Another example of a parametric model is the normal distribution, that depends on a set number of parameters, namely the mean and the standard deviation\n",
+    "\n",
+    "**Non-parametric models** means that our inference will not rely on as many assumptions, such as it will not have to rely on the data being pulled from a particular distribution, it'll be a distribution free inference. An example of a non-parametric inference is creating a distribution of the data (CDF or cumulative distribution function) using a histogram. CDF or the Cumulative Distribution Function defines the probability of where a certain value will fall according to the actual data, thus it is a distribution defined by the actual data that we've pulled from our sample. In this case, we wouldn't be specifying any of the parameters. \n",
+    "\n",
+    "Consider a business example, customer lifetime value, an estimate of the customer's value to the company over time. The data related to customer lifetime value will include the expected length of time as a customer, the type and amount of purchases that customer has made, etc. So to estimate lifetime value, we need to make assumptions about the data, namely, how long do we think customers' going to last as well as how much do we think they will spend over time? These assumptions can be parametric by assuming a specific distribution, whether that's linear over time or some type of decrease over time. Also, these assumptions can be non-parametric, where we'll be relying much more heavily on the data to come to a conclusion. \n",
+    "\n",
+    "### Machine Learning and Statistical Inference\n",
+    "* Machine learning and Statistical inference are very similar. In both machine learning and statistical inference, we're using some sample data in order to infer qualities of the actual underlying population distribution in the real world, and the models that would have generated that data. The data-generating process can be thought of as a linear model representing the actual joint distribution between our x and the y variable. We may care either about the entire distribution when doing machine learning, or just some features of our distribution, such as just getting the point estimate of our mean, for example. \n",
+    "* **Machine learning** that focuses on understanding the underlying parameters and individual effects of all of our parameters require tools pulled from **statistical inference**. On the other hand, some machine learning models tend to only mildly focus on all of these different parameters of the underlying parameters of our distribution, and just focus instead on prediction results, or just those estimates. \n",
+    "\n",
+    "#### Difference\n",
+    "* First, statistical models generally try to explain the world, in terms of relation based on causality. On the contrary, machine learning only tries to mimic the work rather than explain it. \n",
+    "* The statistical modern approach has a very specified model of the world that just needs to be estimated. Relation between observables are deduced in this approach. Different relations between observables are induced in the machine learning approach. This is because it does not have any a priori pre-specified model of the world and instead focuses on the predictive power. \n",
+    "* Furthermore, statistical models typically deal with small data, with up to hundreds of attributes and up to thousands of examples, typically. On the other side, machine learning sometimes deal with data that might have the number of attributes in hundreds of thousands. And the number of examples in hundreds of millions because of these differences. \n",
+    "* While scalability is normally not a major concern for statistical model and approaches. It sometimes becomes critical in machine learning applications. \n",
+    "* Finally, statistical modeling is based on probabilistic approach. Some machine learning methods including support vector machines, neural nets, and some clustering methods are non-probabilistic. \n",
+    "\n",
+    "![ml_vs_stats.png](imgs/ml_vs_stats.png)\n",
+    "\n",
+    "#### Example\n",
+    "Consider a business example of looking at customer churn. Customer churn occurs when a customer leaves a company, thus we need a lower churn rate. Data related to churn will include a target variable for whether or not a customer has left the company. Also, we include other features to help us make that prediction about whether a future customer leave, such as the length of time as a customer, the type and amount of purchases that customer has made, and other customer characteristics such as age, location, etc. Churn prediction is often approached by predicting a score for individuals that estimates the probability the customer will leave or not leave. So 0.99 means they're very likely to leave, 0.01 means we're probably going to hold on to that customer. \n",
+    "\n",
+    "In this example, we can estimate the impact of each feature. Think for every additional year someone has been a customer, that being the feature, they are 20 percent less likely to churn, so giving an estimate for the value of each additional year. For inference, we can compute the confidence interval for determining the statistical significance of the estimate. We can have 95 percent confidence interval on that estimate saying that the effect is either between 19 percent and 21 percent, meaning 20 percent is a good estimate of how much less likely they are to churn. On the other hand, the 95 percent confidence interval can be between negative 10 and 50 percent, meaning each additional year we're very uncertain if it's 20 percent, as a point estimate. For all we know we can actually have a negative effect or we can have a much stronger positive effects."
+   ]
   },
   {
    "cell_type": "code",
@@ -178,16 +205,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Write a difference between statistical tools that are used for prediction and machine learning tools that are used for classification. Examples are required.\n",
+    "The most common way of estimating parameters in a parametric model is through the **Maximum Likelihood Estimate (MLE)**. The likelihood function is related to probability and is a function of the parameters of the model. To make this clear, think about the likelihood function as taking all of our data and saying, \"What is the most likely value for the mean and the most likely value for the standard deviation given the sample data that we see? \" So for the population, what is the most likely parameters given our sample? That's going to be our maximum likelihood estimate. Then we choose the value of each of those parameters that's going to maximize that likelihood function, that's going to maximize what is most likely to occur given the data that we have. \n",
     "\n",
-    "* First, statistical models generally try to explain the world, in terms of relation based on causality. On the contrary, machine learning only tries to mimic the work rather than explain it. \n",
-    "* The statistical modern approach has a very specified model of the world that just needs to be estimated. Relation between observables are deduced in this approach. Different relations between observables are induced in the machine learning approach. This is because it does not have any a priori pre-specified model of the world and instead focuses on the predictive power. \n",
-    "* Furthermore, statistical models typically deal with small data, with up to hundreds of attributes and up to thousands of examples, typically. On the other side, machine learning sometimes deal with data that might have the number of attributes in hundreds of thousands. And the number of examples in hundreds of millions because of these differences. \n",
-    "* While scalability is normally not a major concern for statistical model and approaches. It sometimes becomes critical in machine learning applications. \n",
-    "* Finally, statistical modeling is based on probabilistic approach. Some machine learning methods including support vector machines, neural nets, and some clustering methods are non-probabilistic. \n",
+    "Uniform distribution has a uniformly equal chance that we'll get any value within our range. \n",
     "\n",
-    "![ml_vs_stats.png](imgs/ml_vs_stats.png)\n",
+    "For a given skewed data, if we take the log transformation about data, we end up with a more normally distributed data set. This is basically the log-normal distribution. \n",
     "\n",
+    "Now we have the exponential curve. The exponential curve, you'll have most of your values closer to that left side and the idea is that it'll often be used to say what is going to be the amount of time before the next event. So for example, the time between when you and someone else ends up watching this video. So the time will be, let's say one minute and then assume someone else watches, then you restart and mostly people are around one minute, whereas at some point there's this long spread out, some type of break that's less likely to happen where it takes 10-15 minutes before the next person watching this video. Now, we have the Poisson distribution. A good way to think about this in the real-world is the number of events that happened during a certain amount of time. So the number of events that happened during certain amount of time, we have the Lambda, which is both the average value and the variance value of the distribution. We can think here, an example is how many people are going to watch this video in the next 10 minutes? If Lambda was one, then we'd say most of the time there's only one person that watches every 10 minutes and it's tight around that one. But if it's something like 10, people watch it every 10 minutes, then you would probably have more of a spread of your standard deviation because it could be closer to five or 15 when you have a larger value, and that's going to be your Poisson distribution.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Regression** is the most commonly used machine learning technique. Prediction of stock returns, markets, portfolio, credit losses, and many other problems amount to different sorts of regression. The other major class of supervised learning algorithms, **classification**, is also widely used. For example, it's used for such tasks as loan default model and credit rating predictions, credit card fraud, and anti-money laundering. In unsupervised learning, **clustering** our items sound more or less obvious. For example, such problems say segmentation of stocks, credit card holders, or institutional clients are all classical cases for clustering methods. Representation learning methods such as factor models or **Principal Component Analysis** are machine learning models. Other examples of machine learning approach are to regime change detections and methods to imputation of missing data. "
    ]
   },
