ml_vs_stats image link

--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -204,7 +204,7 @@
     "* While scalability is normally not a major concern for statistical model and approaches. It sometimes becomes critical in machine learning applications. \n",
     "* Finally, statistical modeling is based on probabilistic approach. Some machine learning methods including support vector machines, neural nets, and some clustering methods are non-probabilistic. \n",
     "\n",
-    "<img src='imgs/ml_vs_stats.png' alt='ml_vs_stats' width=800 height=800>\n",
+    "<img src='https://raw.githubusercontent.com/jamwine/Machine-Learning/master/imgs/ml_vs_stats.png' alt='ml_vs_stats' width=800 height=800>\n",
     "\n",
     "### Example\n",
     "Consider a business example of looking at customer churn. Customer churn occurs when a customer leaves a company, thus we need a lower churn rate. Data related to churn will include a target variable for whether or not a customer has left the company. Also, we include other features to help us make that prediction about whether a future customer leave, such as the length of time as a customer, the type and amount of purchases that customer has made, and other customer characteristics such as age, location, etc. Churn prediction is often approached by predicting a score for individuals that estimates the probability the customer will leave or not leave. So 0.99 means they're very likely to leave, 0.01 means we're probably going to hold on to that customer. \n",
